C1: Missing side effects of dynamic constant linkage

XMLWordPrintable

    • b11

        C1 handles unresolved dynamic constants by performing constant resolution at runtime and then putting the constant value into the generated code by patching it. But it treats the not-yet-resolved value as a pure constant without any side effects. It's not the case for dynamic constants which are produced by a user-defined bootstrap method and there are no guarantees that it doesn't have any side effects.

              Assignee:
              Vladimir Ivanov
              Reporter:
              Vladimir Ivanov
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: