8282194: C1: Missing side effects of dynamic constant linkage

Reviewed-by: kvn, thartmann