src/hotspot/share/ci/ciStreams.hpp
@@ -229,10 +229,23 @@ public:
   ciConstant get_constant();
   constantTag get_constant_pool_tag(int index) const;
 
+  constantTag get_raw_pool_tag(int index) const;
+
   // True if the klass-using bytecode points to an unresolved klass
   bool is_unresolved_klass() const {
     constantTag tag = get_constant_pool_tag(get_klass_index());
     return tag.is_unresolved_klass();
+  }
+
+  bool is_dynamic_constant() const {
+    assert(cur_bc() == Bytecodes::_ldc    ||
+           cur_bc() == Bytecodes::_ldc_w  ||
+           cur_bc() == Bytecodes::_ldc2_w, "not supported: %s", Bytecodes::name(cur_bc()));
+
+    int index = get_constant_pool_index();
+    constantTag tag = get_raw_pool_tag(index);
+    return tag.is_dynamic_constant() ||
+           tag.is_dynamic_constant_in_error();
   }
 
   bool is_unresolved_klass_in_error() const {
